use the full canvas and add a title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Getting Started with ml5.js</title>
+    <title>Draw me some penguins: a ML5JS example using Sketch-RNN</title>
     <!-- p5 -->
     <script src="p5.min.js"></script>
     <!-- ml5 -->
@@ -8,6 +8,6 @@
 
   <body>
     <script src="sketch.js"></script>
-  
+
 
 </body></html>
